@@ -164,10 +164,12 @@ void HUD::RenderHUDCommand_(ECommand parCommand, const float2& parGridRegionOffs
 	if (parCommand == EC_NONE)
 		return;
 
+	assert(commandToIconSpriteDesc.count(parCommand) > 0);
 	const SpriteDesc& commandIconSpriteDesc = commandToIconSpriteDesc[parCommand];
 	SDL_Rect commandIconSrc = { commandIconSpriteDesc.offsetX, commandIconSpriteDesc.offsetY,
 		commandIconSpriteDesc.width, commandIconSpriteDesc.height };
 
+	assert(commandToGridPos_.count(parCommand) > 0);
 	int gridPos = commandToGridPos_[parCommand];
 	SDL_Rect commandIconDst = { Sint16(parGridRegionOffset.x) + (gridPos % 3) * (commandIconSpriteDesc.width + 5),
 		Sint16(parGridRegionOffset.y) + (gridPos / 3) * (commandIconSpriteDesc.height + 5), 0, 0};
@@ -182,6 +184,7 @@ void HUD::InitCommandGridPosMapping_()
 	commandToGridPos_[EC_STOP] = 1;
 	commandToGridPos_[EC_CANCEL] = 8;
 	commandToGridPos_[EC_TRAIN_PEON] = 0;
+	commandToGridPos_[EC_TRAIN_GRUNT] = 0;
 	commandToGridPos_[EC_BUILD] = 6;
 	commandToGridPos_[EC_BUILD_TOWN_HALL] = 0;
 	commandToGridPos_[EC_BUILD_FARM] = 1;
@@ -254,6 +257,7 @@ void HUD::ApplyGridClick_(Unit& parUnit, int parGridClickPos)
 			break;
 		case EC_STOP: parUnit.CancelOrder(); break;
 		case EC_TRAIN_PEON: parUnit.Train(EUT_PEON); break;
+		case EC_TRAIN_GRUNT: parUnit.Train(EUT_GRUNT); break;
 		case EC_BUILD: parUnit.SetActionState(EUS_SELECT_BUILDING); break; // TODO: It shouldn't modified unit action state
 		// orders with destination
 		case EC_MOVE:
