@@ -1,7 +1,8 @@
 ===============================================================================
 * v0.8
 ===============================================================================
-- Farm can be built by peon
+- Farm and barrack can be built by peon
+- Grunt can be train from barrack
 ===============================================================================
 
 ===============================================================================
